# manifold

./: CMakeLists.txt
include/manifold/: common.h  cross_section.h  manifold.h  mesh.h  polygon.h
src/: CMakeLists.txt
test/: CMakeLists.txt  manifold_test.cpp  test.h
